--- a/coc-settings.json
+++ b/coc-settings.json
@@ -6,8 +6,7 @@
     "javascript",
     "javascriptreact",
     "typescript",
-    "typescriptreact",
-	"json"
+    "typescriptreact"
   ],
   "tsserver.formatOnType": true,
   "coc.preferences.formatOnType": true,
