--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,17 +1,23 @@
 {
   "eslint.autoFixOnSave": true,
-  "eslint.filetypes": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
-  "prettier.disableSuccessMessage": true,
-  "coc.preferences.formatOnSaveFiletypes": [
+  "eslint.filetypes": [
     "javascript",
     "javascriptreact",
     "typescript",
     "typescriptreact"
   ],
+  "prettier.disableSuccessMessage": true,
+  "coc.preferences.formatOnSaveFiletypes": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "json",
+    "markdown"
+  ],
   "tsserver.formatOnType": true,
   "coc.preferences.formatOnType": true,
   "diagnostic.checkCurrentLine": true,
-  "javascript.suggest.autoImports": true, 
+  "javascript.suggest.autoImports": true,
   "typescript.suggest.autoImports": true
 }
-
